# bb-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
bbdc_cli/: __init__.py  __main__.py
docs/: CLI.md  coverage.md  examples.md
