[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbdc-cli"
version = "0.5.0"
description = "Typer CLI for Bitbucket Data Center"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.9",
  "requests>=2.31",
]
keywords = ["bitbucket", "cli", "typer", "data-center", "server"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/marcosgalleterobbva/bb-cli"

[project.scripts]
bbdc = "bbdc_cli.__main__:main"

[project.optional-dependencies]
build = [
  "build>=1.2.1",
  "bump-my-version>=1.2.0",
  "twine>=5.0.0",
]

[tool.setuptools]
packages = ["bbdc_cli"]

[tool.bumpversion]
current_version = "0.5.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
commit = false
message = "Bump version: {current_version} -> {new_version}"
commit_args = ""
files = [
  { filename = "pyproject.toml" },
  { filename = "bbdc_cli/__init__.py" },
]
